--- a/tomer/DESCRIPTION
+++ b/tomer/DESCRIPTION
@@ -9,5 +9,7 @@ Encoding: UTF-8
 LazyData: true
 Suggests: testthat
 RoxygenNote: 6.0.1
-LinkingTo: Rcpp
+LinkingTo:
+    Rcpp,
+    testthat
 Imports: Rcpp
