--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -8,7 +8,7 @@ export(get_bayes_factor_mode_from_model)
 export(read_bayes_factor_mode_from_file)
 export(type_to_topic_indicators)
 export(write_bayes_factor_mode_to_file)
-importFrom(Rcpp,sourceCpp)
+import(Rcpp)
 importFrom(methods,new)
 importFrom(utils,read.table)
 importFrom(utils,write.table)
