--- a/tomer/DESCRIPTION
+++ b/tomer/DESCRIPTION
@@ -7,9 +7,11 @@ Depends: R (>= 3.4.1)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat
-RoxygenNote: 6.0.1
+Suggests:
+    testthat
+Imports:
+    Rcpp
 LinkingTo:
     Rcpp,
     testthat
-Imports: Rcpp
+RoxygenNote: 6.0.1
