--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -9,6 +9,7 @@ export(read_bayes_factor_mode_from_file)
 export(type_to_topic_indicators)
 export(write_bayes_factor_mode_to_file)
 import(Rcpp)
+importFrom(Rcpp,cpp_object_initializer)
 importFrom(Rcpp,evalCpp)
 importFrom(methods,new)
 importFrom(utils,read.table)
