Exporting bayes factor.

--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -5,6 +5,7 @@ export(evaluate_left_to_right)
 export(get_bayes_factor_mode)
 export(get_bayes_factor_mode_from_data)
 export(get_bayes_factor_mode_from_model)
+export(log_bayes_factor)
 export(read_bayes_factor_mode_from_file)
 export(type_to_topic_indicators)
 export(write_bayes_factor_mode_to_file)
