--- a/tomer/DESCRIPTION
+++ b/tomer/DESCRIPTION
@@ -13,7 +13,9 @@ Imports:
     Rcpp (>= 0.12.12),
     methods,
     dplyr,
-    checkr
+    checkr,
+    MCMCpack,
+    plyr
 LinkingTo:
     Rcpp,
     testthat
