--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -7,6 +7,8 @@ export(get_bayes_factor_mode_from_data)
 export(get_bayes_factor_mode_from_model)
 export(log_bayes_factor)
 export(read_bayes_factor_mode_from_file)
+export(sample_corpus)
+export(sample_document)
 export(write_bayes_factor_mode_to_file)
 import(Rcpp)
 importFrom(Rcpp,cpp_object_initializer)
