R interface against npmi.

--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -6,8 +6,10 @@ export(get_bayes_factor_mode)
 export(get_bayes_factor_mode_from_data)
 export(get_bayes_factor_mode_from_model)
 export(log_bayes_factor)
+export(npmi)
 export(read_bayes_factor_mode_from_file)
 export(sample_document)
+export(sample_topic_indicators)
 export(write_bayes_factor_mode_to_file)
 import(Rcpp)
 importFrom(Rcpp,cpp_object_initializer)
