--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -10,6 +10,7 @@ export(npmi)
 export(read_bayes_factor_mode_from_file)
 export(sample_document)
 export(sample_topic_indicators)
+export(topic_coherence)
 export(write_bayes_factor_mode_to_file)
 import(Rcpp)
 importFrom(Rcpp,cpp_object_initializer)
