Created utility function to save reference counts cache.

--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -8,8 +8,10 @@ export(get_bayes_factor_mode_from_model)
 export(markovian_bf_test)
 export(markovian_lr_test)
 export(npmi)
+export(npmi_create_cache)
 export(read_bayes_factor_mode_from_file)
 export(topic_coherence)
+export(topic_coherence_create_cache)
 export(write_bayes_factor_mode_to_file)
 import(Rcpp)
 importFrom(Rcpp,cpp_object_initializer)
