Created an incomplete faster topic coherence evaluator.

--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -12,6 +12,7 @@ export(npmi_create_cache)
 export(read_bayes_factor_mode_from_file)
 export(topic_coherence)
 export(topic_coherence_create_cache)
+export(topic_coherence_file)
 export(write_bayes_factor_mode_to_file)
 import(Rcpp)
 importFrom(Rcpp,cpp_object_initializer)
