--- a/tomer/NAMESPACE
+++ b/tomer/NAMESPACE
@@ -9,6 +9,7 @@ export(markovian_bf_test)
 export(markovian_lr_test)
 export(npmi)
 export(npmi_create_cache)
+export(npmi_file)
 export(read_bayes_factor_mode_from_file)
 export(topic_coherence)
 export(topic_coherence_create_cache)
